Fixed filter section being half way out of the viewport on page load.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@46 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -11,6 +11,7 @@ body {
   font: 10pt Segoe UI, sans-serif;
   background: url('../images/background.jpg');
   margin: 40px;
+  overflow-y: scroll;
 }
 
 input,
