--- a/public/assets/styles/layout.css
+++ b/public/assets/styles/layout.css
@@ -6,6 +6,7 @@
   margin: -40px -40px 40px;
   position: relative;
   font-size: 16px;
+  min-height: 80px;
 }
 
 #headerProfile {
